# poc-covid-bot-gouv

./: Cargo.toml  log.txt
src/: lib.rs
src/discord/: mod.rs
src/hook/: hyper.rs  mod.rs  simple.rs  utils.rs
