[package]
name = "gouv-rs"
version = "0.1.0"
authors = ["Johan Planchon <dev@planchon.xyz>"]
edition = "2018"

[[bin]]
name = "covid-bot"
path = "src/bin/covid-bot.rs"
required-features = ["covid-bot","discord"]

[[bin]]
name = "webhook"
path = "src/bin/webhook.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
covid-bot = ["serde","serde_json","csv"]
webhook = []
server = []
discord = []

[dependencies]
hyper = { version = "0.13", default-features = false}
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["macros","rt-core"] }
sha2 = "0.8"
base64 = "0.12"
chrono = "0.4"
prettytable-rs = "0.8"

# Binaries
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
csv = { version = "1.1", optional = true }